Fix broken layout in smartphone

--- a/src/sass/modules/components/contents/_skills.sass
+++ b/src/sass/modules/components/contents/_skills.sass
@@ -8,10 +8,11 @@
     display: flex
     @include md-layout
       display: block
+    @include sp-layout
+      display: block
+      width: 100%
     padding: 20px
     width: 50%
-    @include sp-layout
-      width: 100%
   
   &__skill
     margin-bottom: 5px
