--- a/src/sass/modules/components/contents/_work.sass
+++ b/src/sass/modules/components/contents/_work.sass
@@ -10,6 +10,8 @@
     display: block
     margin: 20px
     width: 400px
+    @include sp-layout
+      width: 80%
     border: 5px solid $accent-blue
   &__discription-wrapper
     display: flex
